# dialectical-framework

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  pyproject.toml  release.sh
.chainlit/: config.toml
.claude/commands/df/: db-reset.md  review-prompts.md  wheel-test.md
docs/: PROJECT1.md  PROMPTING.md  TASKS.md  agents.md  graph-dc-vocabulary.md  graph-portability.md  graph.md  llm-wiki.md  portability.md  scoring.md  tmp-ai-notes.md
notebooks/: love.ipynb  minds.ipynb  seasons.ipynb
scripts/: check_bedrock_quotas.py  cleanup_degenerate_cycles.py  cleanup_stale_nodes.py
src/: config.py
src/dialectical_framework/: __init__.py  brain.py  causal_cycle.py  causal_cycles_box.py  config.py  cycle.py  dialectical_analysis.py  dialectical_component.py  dialectical_components_box.py  dialectical_components_deck.py  dialectical_reasoning.py  directed_graph.py  reciprocal_solution.py  settings.py  spiral.py  symmetrical_transition.py  synthesis.py  transformation.py  transition.py  transition_cell_to_cell.py  transition_segment_to_segment.py  wheel.py  wheel2.py  wheel_segment.py  wisdom_unit.py
src/dialectical_framework/agents/: agent_context.py  apps.py  conversation_facilitator.py  conversational_tool.py  executable_capability.py  execution_report.py  reasonable_concern.py  run_report.py  stream_events.py
src/dialectical_framework/ai_dto/: causal_cycle_assessment_dto.py  causal_cycle_dto.py  causal_cycles_deck_dto.py  constructive_convergence_transition_audit_dto.py  dialectical_component_dto.py  dialectical_components_deck_dto.py  dto_mapper.py  graph_mapper.py  statement_dto.py  statements_deck_dto.py
src/dialectical_framework/ai_structured_data/: causal_cycle.py  causal_cycle_assessment.py  causal_cycles_deck.py
src/utils/: dc_replace.py  is_async.py
tests/: README.md  conftest.py  mock_brain.py  test_agents_e2e.py  test_analyst.py  test_analyst_anchoring.py  test_analyst_classification.py  test_analyst_polarity.py  test_analyst_polarity_editing.py  test_analyst_tension.py  test_analyst_validation.py  test_brainstorm.py  test_brainstorming.py  test_brainstorming_anchoring.py  test_brainstorming_classification.py  test_brainstorming_polarity.py  test_brainstorming_polarity_editing.py  test_brainstorming_tension.py  test_brainstorming_validation.py  test_causality_agent.py  test_counselor.py  test_dialectical_context.py  test_effect_logger.py  test_event_bus.py  test_execution_report.py  test_expand_polarities_count.py  test_explorer.py  test_extract_polarities.py  test_graph.py  test_graph_mapper.py  test_input_resolver.py  test_llm_model_connection.py  test_markov_vs_holistic.py  test_nexus_agent.py  test_orchestrator.py  test_polarities.py  test_portable_identifiers.py  test_prompt_review_regressions.py  test_prompt_vocabulary.py  test_quotas.py  (+17 more)
tests/reports/: .gitignore
(+427 files in other folders)
